2015-12-12  Markus Gans  <guru.mail@muenster.de>
	* Improve sub-sub-menu handling

2015-12-10  Markus Gans  <guru.mail@muenster.de>
	* PC encoding: Avoid to print ASCII sign 0x00..0x1f in xterm
	* Newfont Bullet sign

2015-12-08  Markus Gans  <guru.mail@muenster.de>
	* Add "menu" example to demonstrate the behavior from FMenuBar, 
	  FMenu, FMenuItem, FCheckMenuItem and FRadioMenuItem widgets.
	* Show status bar messages, if no keys are available.

2015-11-29  Markus Gans  <guru.mail@muenster.de>
	* Better handling of empty strings in FLineEdit and FButton
	* Add a sub-menu to the "ui.cpp" example

2015-11-25  Markus Gans  <guru.mail@muenster.de>
	* Small menu improvements

2015-11-24  Markus Gans  <guru.mail@muenster.de>
	* Improved mouse and keyboard handling in sub-menus

2015-11-22  Markus Gans  <guru.mail@muenster.de>
	* Add sub-menu support

2015-11-19  Markus Gans  <guru.mail@muenster.de>
	* Add the missing resetXTermHighlightBackground method

2015-11-15  Markus Gans  <guru.mail@muenster.de>
	* Add two new classes FCheckMenuItem and FRadioMenuItem 
	  for menu check marks and menu option marks (bullets)

2015-11-12  Markus Gans  <guru.mail@muenster.de>
	* Improve menu accelerator keys
	* Shows accelerator keys on the right side of the FMenu.

2015-11-08  Markus Gans  <guru.mail@muenster.de>
	* Activate the previous window in case if the menu is open and 
	  the mouse click has activated no window.

2015-11-07  Markus Gans  <guru.mail@muenster.de>
	* Improved menu focus handling
	* Menu supports newfont

2015-11-05  Markus Gans  <guru.mail@muenster.de>
	* Menu bar navigation without menu drop down

2015-11-03  Markus Gans  <guru.mail@muenster.de>
	* Improve keyboard shortcut handling in menus

2015-11-01  Markus Gans  <guru.mail@muenster.de>
	* First working version of an application menu, 
	  it uses the new classes FMenuBar, FMenu and FMenuItem 
	  (alpha state)

2015-10-29  Markus Gans  <guru.mail@muenster.de>
	* Support for the menu key
