@@ -1,5 +1,5 @@
 STARTFONT 2.1
-FONT -misc-8x16graph-medium-r-normal--16-160-75-75-C-80-iso8859-1
+FONT -misc-8x16graph-medium-r-normal--17-160-75-75-C-80-iso8859-1
 SIZE 16 75 75
 FONTBOUNDINGBOX 8 16 0 -4
 STARTPROPERTIES 6
