@@ -1,3 +1,6 @@
+2015-12-16  Markus Gans  <guru.mail@muenster.de>
+	* Avoid to show menus outside of the screen
+
 2015-12-12  Markus Gans  <guru.mail@muenster.de>
 	* Improve sub-sub-menu handling
 
